syntax = "proto3";

package metrics.collector.v1;
option go_package = "github.com/alkurbatov/metrics-collector/grpcapi";

import "google/protobuf/empty.proto";

// NB (alkurbatov): The name was intentionally choosen to match the similar structure
// from HTTP API for convenience.
message MetricReq {
  string id = 1;
  string mtype = 2;
  int64 delta = 3;
  double value = 4;
}

message GetMetricRequest {
  string id = 1;
  string mtype = 2;
}

message BatchUpdateRequest {
  repeated MetricReq data = 1;
}

service Metrics {
  rpc Update(MetricReq) returns (MetricReq);
  rpc BatchUpdate(BatchUpdateRequest) returns (google.protobuf.Empty);

  rpc Get(GetMetricRequest) returns (MetricReq);
}
